--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="controls">
       <div class="control-group">
         <label for="dimension">
-          Velg Dimensjon:
+          Velg dimensjon:
           <!-- Fargeboks for å vise valgt dimensjonsfarge tydelig -->
           <span id="dimensionColor" class="color-box"></span>
         </label>
@@ -167,7 +167,7 @@
         </select>
       </div>
       <div class="control-group">
-        <label for="attachment">Velg Innfestingsmåte:</label>
+        <label for="attachment">Velg innfestingsmåte:</label>
         <select id="attachment">
           <option value="Rett">Rett</option>
           <option value="Snaret">Snaret</option>
@@ -177,15 +177,15 @@
         </select>
       </div>
       <div class="control-group">
-        <label for="parts">Velg antall Parter:</label>
+        <label for="parts">Velg antall parter:</label>
         <select id="parts">
-          <option value="1">En Stropp</option>
-          <option value="2">To Stropper</option>
-          <option value="3-4">Tre- og Fire Stropper</option>
+          <option value="1">En stropp</option>
+          <option value="2">To stropper</option>
+          <option value="3-4">Tre- og fire stropper</option>
         </select>
       </div>
       <div class="control-group">
-        <label for="angle">Velg Arbeidsvinkel:</label>
+        <label for="angle">Velg arbeidsvinkel:</label>
         <select id="angle">
           <option value="1.0">0°</option>
           <option value="0.8">1°-30°</option>
