--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       <!-- Skisse-/bildedelen -->
       <div class="lift-image">
         <!-- Standard skisse (Rett) – denne oppdateres dynamisk -->
-        <img id="liftImage" src="images/skisse_rett.png" alt="Skisse av løft" />
+        <img id="liftImage" src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><line x1='50' y1='75' x2='250' y2='75' stroke='%238A2BE2' stroke-width='8' stroke-linecap='round'/><polygon points='250,75 265,65 265,85' fill='%238A2BE2'/></svg>" alt="Skisse av løft" />
       </div>
     </div>
   </div>
@@ -193,16 +193,25 @@
     document.getElementById('dimension').addEventListener('change', updateDimensionColor);
     updateDimensionColor();
     
-    // Mapping av innfestingsmåte til skissebilder (NB: bruk dine egne bilder fra Certex-dokumentasjonen)
+    /* 
+      Mapping av innfestingsmåte til SVG-skisser – 
+      skissene er basert på utseendet i Certex sin løftetabell.
+      Ved:
+        "Rett"       : En rett stropp med en liten krok.
+        "Snaret"     : En løkke (sirkel) som symboliserer snaring.
+        "U/Dobbel"   : To U-formede kurver for dobbelt løft.
+        "U: 0°-45°"  : En mild U-kurve.
+        "U: 45°-60°" : En brattere U-kurve.
+    */
     const liftImages = {
-      "Rett": "images/skisse_rett.png",
-      "Snaret": "images/skisse_snaret.png",
-      "U/Dobbel": "images/skisse_udobbel.png",
-      "U: 0°-45°": "images/skisse_u0_45.png",
-      "U: 45°-60°": "images/skisse_u45_60.png"
+      "Rett": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><line x1='50' y1='75' x2='250' y2='75' stroke='%238A2BE2' stroke-width='8' stroke-linecap='round'/><polygon points='250,75 265,65 265,85' fill='%238A2BE2'/></svg>",
+      "Snaret": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><circle cx='150' cy='75' r='40' stroke='%23228B22' stroke-width='8' fill='none'/></svg>",
+      "U/Dobbel": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><path d='M50,30 V120 Q90,140,130,120 V30' stroke='%23FFD700' stroke-width='8' fill='none'/><path d='M170,30 V120 Q210,140,250,120 V30' stroke='%23FFD700' stroke-width='8' fill='none'/></svg>",
+      "U: 0°-45°": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><path d='M50,75 Q150,40,250,75' stroke='%23808080' stroke-width='8' fill='none'/></svg>",
+      "U: 45°-60°": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><path d='M50,90 Q150,20,250,90' stroke='%23FF0000' stroke-width='8' fill='none'/></svg>"
     };
     
-    // Beregningsfunksjonen (beregner maks belastning og oppdaterer skissen)
+    // Beregningsfunksjonen: Beregner maks belastning og oppdaterer skissen
     function calculate() {
       const dimension = parseFloat(document.getElementById('dimension').value);
       const attachment = document.getElementById('attachment').value;
