--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       Skissene er inspirert av Certex sin løftetabell.
     */
     const attachmentImages = {
-      "Rett": "flyver.png",
+      "Rett": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><image href='flyver.png' width='300' height='150' /></svg>",
       "Snaret": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><circle cx='150' cy='75' r='40' stroke='%23228B22' stroke-width='8' fill='none'/></svg>",
       "U/Dobbel": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><path d='M50,30 V120 Q90,140,130,120 V30' stroke='%23FFD700' stroke-width='8' fill='none'/><path d='M170,30 V120 Q210,140,250,120 V30' stroke='%23FFD700' stroke-width='8' fill='none'/></svg>",
       "U: 0°-45°": "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='300' height='150'><path d='M50,75 Q150,40,250,75' stroke='%23808080' stroke-width='8' fill='none'/></svg>",
