--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Løftekalkulator - Fiberstropper</title>
+  <!-- Google Fonts for et rent uttrykk -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
   <style>
+    /* Generelle stiler */
     * { box-sizing: border-box; }
     body {
       margin: 0;
@@ -21,8 +23,10 @@
     }
     h1 {
       text-align: center;
+      margin-bottom: 20px;
       font-size: 28px;
     }
+    /* Flex-container for kalkulator og skisser */
     .calc-wrapper {
       display: flex;
       flex-wrap: wrap;
@@ -34,9 +38,9 @@
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       padding: 30px;
-      width: 100%;
       max-width: 450px;
       margin-bottom: 20px;
+      width: 100%;
     }
     label {
       display: block;
@@ -51,6 +55,7 @@
       border-radius: 5px;
       font-size: 16px;
       background-color: #fafafa;
+      color: #333;
     }
     button {
       width: 100%;
@@ -74,10 +79,19 @@
       padding: 10px;
       border-radius: 5px;
     }
+    /* Skisseområdene */
     .sketches {
       flex: 1;
       max-width: 500px;
       margin-left: 20px;
+    }
+    .sketch {
+      margin-bottom: 20px;
+      text-align: center;
+    }
+    .sketch h3 {
+      margin-bottom: 10px;
+      font-size: 18px;
     }
     .sketch img {
       max-width: 100%;
@@ -85,8 +99,23 @@
       border-radius: 5px;
     }
     @media (max-width: 800px) {
-      .calc-wrapper { flex-direction: column; align-items: center; }
-      .sketches { margin-left: 0; margin-top: 20px; }
+      .calc-wrapper {
+        flex-direction: column;
+        align-items: center;
+      }
+      .sketches {
+        margin-left: 0;
+        margin-top: 20px;
+      }
+    }
+    /* Stil for fargeboksen ved dimensjon */
+    .color-box {
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      margin-left: 10px;
+      vertical-align: middle;
+      border: 1px solid #ccc;
     }
   </style>
 </head>
@@ -94,9 +123,12 @@
   <div class="container">
     <h1>Løftekalkulator - Fiberstropper</h1>
     <div class="calc-wrapper">
+      <!-- Kalkulatoren -->
       <div class="calculator">
-        <label for="dimension">Velg Dimensjon:</label>
-        <select id="dimension" onchange="updateDimensionColor()">
+        <label for="dimension">Velg Dimensjon:
+          <span id="dimensionColor" class="color-box"></span>
+        </label>
+        <select id="dimension">
           <option value="1" data-color="#8A2BE2">1 tonn - Fiolett</option>
           <option value="2" data-color="#228B22">2 tonn - Grønn</option>
           <option value="3" data-color="#FFD700">3 tonn - Gul</option>
@@ -108,7 +140,7 @@
         </select>
 
         <label for="attachment">Velg Innfestingsmåte:</label>
-        <select id="attachment" onchange="updateAttachmentImage()">
+        <select id="attachment">
           <option value="Rett">Rett</option>
           <option value="Snaret">Snaret</option>
           <option value="U/Dobbel">U/Dobbel</option>
@@ -117,14 +149,14 @@
         </select>
 
         <label for="parts">Velg antall stropper:</label>
-        <select id="parts" onchange="updateStrapImage()">
+        <select id="parts">
           <option value="1">En stropp</option>
           <option value="2">To stropper</option>
           <option value="3-4">Tre og fire stropper</option>
         </select>
 
         <label for="angle">Velg Arbeidsvinkel:</label>
-        <select id="angle" onchange="updateStrapImage()">
+        <select id="angle">
           <option value="1.0">0°</option>
           <option value="0.8">1°–30°</option>
           <option value="0.7">31°–45°</option>
@@ -132,16 +164,21 @@
         </select>
 
         <button onclick="calculate()">Beregn</button>
-        <div class="result" id="result">Maks belastning: <span id="maxLoad">0</span> tonn</div>
+        <div class="result" id="result">
+          Maks belastning: <span id="maxLoad">0</span> tonn
+        </div>
       </div>
 
+      <!-- Skisseområdene -->
       <div class="sketches">
         <div class="sketch">
           <h3>Innfestingsmåte</h3>
+          <!-- Bruk en standard bildebane; den oppdateres dynamisk -->
           <img id="attachmentSketch" src="images/rett.png" alt="Innfestingsmåte" onerror="this.src='images/error.png'">
         </div>
         <div class="sketch">
           <h3>Antall stropper</h3>
+          <!-- Dette bildet oppdateres dynamisk -->
           <img id="strapSketch" src="images/rett.png" alt="Antall stropper" onerror="this.src='images/error.png'">
         </div>
       </div>
@@ -149,31 +186,94 @@
   </div>
 
   <script>
-    function updateAttachmentImage() {
-      const attachmentImages = {
-        "Rett": "images/rett.png",
-        "Snaret": "images/snaret.png",
-        "U/Dobbel": "images/uform2.png",
-        "U: 0°-45°": "images/uformvinkel.png",
-        "U: 45°-60°": "images/uformvinkel.png"
-      };
-      document.getElementById('attachmentSketch').src = attachmentImages[document.getElementById('attachment').value];
-    }
-
-    function updateStrapImage() {
-      document.getElementById('strapSketch').src = "images/" + document.getElementById('parts').value + ".png";
-    }
-
+    // Oppdater dimensjonsfargen
     function updateDimensionColor() {
-      const color = document.getElementById('dimension').selectedOptions[0].dataset.color;
-      document.getElementById('dimension').style.backgroundColor = color;
+      const dimensionSelect = document.getElementById('dimension');
+      const colorBox = document.getElementById('dimensionColor');
+      const selectedOption = dimensionSelect.options[dimensionSelect.selectedIndex];
+      const color = selectedOption.getAttribute('data-color') || '#ccc';
+      if (colorBox) {
+        colorBox.style.backgroundColor = color;
+      }
+    }
+    document.getElementById('dimension').addEventListener('change', updateDimensionColor);
+    updateDimensionColor();
+
+    // Mapping for innfestingsmåte
+    const attachmentImages = {
+      "Rett": "images/rett.png",
+      "Snaret": "images/snaret.png",
+      "U/Dobbel": "images/uform2.png",
+      "U: 0°-45°": "images/uformvinkel.png",
+      "U: 45°-60°": "images/uformvinkel.png"
+    };
+
+    // Mapping for antall stropper med arbeidsvinkel
+    const strapImages = {
+      "1": "images/rett.png",  // For én stropp bruker vi innfestingsmåtebildet
+      "2": {
+        "1.0": "images/tostropper_0.png",
+        "0.8": "images/tostropper_45.png",
+        "0.7": "images/tostropper_452.png",
+        "0.5": "images/tostropper_60.png"
+      },
+      "3-4": {
+        "1.0": "images/trestropper_0.png",
+        "0.8": "images/stroppertrestropper_45.png",
+        "0.7": "images/trestropper_452.png",
+        "0.5": "images/trestropper_60.png"
+      }
+    };
+
+    // Oppdater bildet for innfestingsmåte
+    function updateAttachmentImage() {
+      const attVal = document.getElementById('attachment').value;
+      document.getElementById('attachmentSketch').src = attachmentImages[attVal] || attachmentImages["Rett"];
     }
 
+    // Oppdater bildet for antall stropper
+    function updateStrapImage() {
+      const parts = document.getElementById('parts').value;
+      const angle = document.getElementById('angle').value;
+      let imgSrc = "";
+      if (parts === "1") {
+        // Bruk innfestingsmåtebildet ved 1 stropp
+        imgSrc = attachmentImages[document.getElementById('attachment').value] || "images/rett.png";
+      } else if (parts === "2") {
+        imgSrc = strapImages["2"][angle] || "images/tostropper_0.png";
+      } else if (parts === "3-4") {
+        imgSrc = strapImages["3-4"][angle] || "images/trestropper_0.png";
+      }
+      document.getElementById('strapSketch').src = imgSrc;
+    }
+
+    // Kalkuler funksjonen – beregner og oppdaterer bilder
     function calculate() {
-      document.getElementById('maxLoad').innerText = "Beregnet verdi!";
+      const dimension = parseFloat(document.getElementById('dimension').value);
+      const attachment = document.getElementById('attachment').value;
+      const parts = document.getElementById('parts').value;
+      const angleFactor = parseFloat(document.getElementById('angle').value);
+      let baseLoad = dimension;
+      if (attachment === "Snaret") {
+        baseLoad *= 0.8;
+      } else if (attachment === "U/Dobbel") {
+        baseLoad *= 2.0;
+      } else if (attachment === "U: 0°-45°") {
+        baseLoad *= 1.7;
+      } else if (attachment === "U: 45°-60°") {
+        baseLoad *= 1.4;
+      }
+      if (parts === "2") {
+        baseLoad *= 2.1;
+      } else if (parts === "3-4") {
+        baseLoad *= 3.0;
+      }
+      const maxLoad = baseLoad * angleFactor;
+      document.getElementById('maxLoad').innerText = maxLoad.toFixed(2);
       updateAttachmentImage();
       updateStrapImage();
     }
   </script>
 </body>
 </html>
+
