--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="calc-wrapper">
       <!-- Kalkulatoren -->
       <div class="calculator">
-        <label for="dimension">Velg Dimensjon:
+        <label for="dimension">Dimensjon:
           <span id="dimensionColor" class="color-box"></span>
         </label>
         <select id="dimension">
@@ -133,7 +133,7 @@
           <option value="10" data-color="#FFA500">10 tonn - Oransje</option>
         </select>
 
-        <label for="attachment">Velg Innfestingsmåte:</label>
+        <label for="attachment">Innfestingsmåte:</label>
         <select id="attachment" onchange="updateAttachmentImage()">
           <option value="Rett">Rett</option>
           <option value="Snaret">Snaret</option>
@@ -142,14 +142,14 @@
           <option value="U: 45°-60°">U: 45°-60°</option>
         </select>
 
-        <label for="parts">Velg antall stropper:</label>
+        <label for="parts">Antall stropper:</label>
         <select id="parts" onchange="updateStrapImage()">
           <option value="1">En stropp</option>
           <option value="2">To stropper</option>
           <option value="3-4">Tre og fire stropper</option>
         </select>
 
-        <label for="angle">Velg Arbeidsvinkel:</label>
+        <label for="angle">Arbeidsvinkel:</label>
         <select id="angle" onchange="updateStrapImage()">
           <option value="1.0">0°</option>
           <option value="0.8">1°–30°</option>
